@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.47 2002/09/24 16:35:02 ukai Exp $ */
+/* $Id: proto.h,v 1.48 2002/10/30 15:39:41 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -521,7 +521,7 @@ extern void set_environ(char *var, char *value);
 extern FILE *localcgi_post(char *, char *, FormList *, char *);
 extern FILE *localcgi_get(char *, char *, char *);
 extern void loadPasswd(void);
-extern int find_auth_user_passwd(char *host, int port, char *file, char *realm,
+extern int find_auth_user_passwd(ParsedURL *pu, char *realm,
 				 Str *uname, Str *pwd, int is_proxy);
 extern Str find_auth_cookie(char *host, int port, char *file, char *realm);
 extern void add_auth_cookie(char *host, int port, char *file, char *realm,
